fix: description of the server and endpoints in swagger
