# docs/swagger.yaml
@@ -21,12 +21,12 @@ definitions:
       status:
         type: string
     type: object
-host: localhost:*
+host: localhost:8080
 info:
   contact: {}
   description: Server for create, read and delete tasks
   title: Test Task I/O bound
-  version: 0.5.2
+  version: "0.6"
 paths:
   /api/task/delete:
     delete:
@@ -44,12 +44,8 @@ paths:
           description: No Content
           schema:
             $ref: '#/definitions/rest.ResponceId'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/restutils.HTTPError'
-        "403":
-          description: Forbidden
+        default:
+          description: ""
           schema:
             $ref: '#/definitions/restutils.HTTPError'
       summary: Delete task
